add two ways input google font style.

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>To-do-list</title>
     <base href="/">
+
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Niramit&effect=fire-animation">
 </head>
 <body ng-app="to-do-list">
     <h1>To-Do-List</h1>
