--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 </head>
 <body ng-app="to-do-list">
     <h1>To-Do-List</h1>
-    <div style="text-align: left">
+    <div style="text-align: left" ng-app="todo">
         <todolist></todolist>
     </div>
 </body>
